--- a/.github/workflows/mv3.yml
+++ b/.github/workflows/mv3.yml
@@ -38,13 +38,12 @@ jobs:
       - name: Create GitHub release
         id: create_release
         uses: ncipollo/release-action@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT }}
         with:
           tag: ${{ env.TAGNAME }}
           owner: uBlockOrigin
           prerelease: true
           repo: uBOL-issues
+          token: ${{ secrets.PAT }}
       - name: Upload Chromium uBOLite MV3 package
         uses: actions/upload-release-asset@v1
         env:
