--- a/platform/firefox/manifest.json
+++ b/platform/firefox/manifest.json
@@ -17,6 +17,9 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "uBlock0@raymondhill.net",
+      "strict_min_version": "78.0"
+    },
+    "gecko_android": {
       "strict_min_version": "79.0"
     }
   },
