--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Assemble release notes
         run: |
           > release.body.txt
-          grep -m1 -B10000  "----------" CHANGELOG.md >> release.body.txt
+          grep -m1 -B10000 -- "----------" CHANGELOG.md >> release.body.txt
           sed -e 's/%version%/${{ steps.release_info.outputs.VERSION }}/g' RELEASE.HEAD.md >> release.body.txt
       - name: Create GitHub release
         id: create_release
