Fine tune eslint behavior

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -15,7 +15,7 @@ rules:
         - Program > IfStatement > BlockStatement
         - Program > ExpressionStatement > CallExpression > ArrowFunctionExpression > BlockStatement
         - CallExpression > MemberExpression
-        - ArrayExpression > Literal
+        - ArrayExpression > *
     no-control-regex: off
     no-empty: off
     sort-imports: warn
