Improve suggested candidate filters in element picker
Additionally, fix eslint warnings.

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -16,6 +16,7 @@ rules:
         - Program > ExpressionStatement > CallExpression > ArrowFunctionExpression > BlockStatement
         - CallExpression > MemberExpression
         - ArrayExpression > *
+        - ObjectExpression > *
     no-control-regex: off
     no-empty: off
     sort-imports: warn
