[firefox] Add entry for 128px icon
Related issue:
https://github.com/uBlockOrigin/uBlock-issues/issues/3285

--- a/platform/firefox/manifest.json
+++ b/platform/firefox/manifest.json
@@ -99,7 +99,8 @@
     "32": "img/ublock.svg",
     "48": "img/ublock.svg",
     "64": "img/ublock.svg",
-    "96": "img/ublock.svg"
+    "96": "img/ublock.svg",
+    "128": "img/ublock.svg"
   },
   "manifest_version": 2,
   "name": "uBlock Origin",
