[mv3] Open options page in tab in Firefox

--- a/platform/mv3/firefox/manifest.json
+++ b/platform/mv3/firefox/manifest.json
@@ -37,6 +37,7 @@
   "manifest_version": 3,
   "name": "__MSG_extName__",
   "options_ui": {
+      "open_in_tab": true,
       "page": "dashboard.html"
   },
   "optional_permissions": [
