[mv3] Implement strict blocking
Related issue:
https://github.com/uBlockOrigin/uBOL-home/issues/214

This implements basic functionality for strict blocking, i.e. the
ability to block navigation to undesirable websites. This is a
first implementation, which converts only filters that are plain
hostnames.

Unlike with uBO, it is not possible to know from which ruleset a
blocking rule originates. Nonetheless, users will have to make a
choice as to whether navigation should proceed or not.

A setting has been added to the dashboard to wholly enable/disable
strict blocking. It is enabled by default.

Potential future improvements, pending investigation on feasability
in an MV3 framework:
- Extend coverage to explicit `document` filters
- Leverage and use `urlskip=` filters in the blocking page in order
  to proceed while bypassing unwanted redirects.

--- a/platform/mv3/chromium/manifest.json
+++ b/platform/mv3/chromium/manifest.json
@@ -25,7 +25,7 @@
     "128": "img/icon_128.png"
   },
   "manifest_version": 3,
-  "minimum_chrome_version": "119.0",
+  "minimum_chrome_version": "122.0",
   "name": "__MSG_extName__",
   "options_page": "dashboard.html",
   "optional_host_permissions": [
@@ -41,6 +41,5 @@
   "storage": {
     "managed_schema": "managed_storage.json"
   },
-  "version": "1.0",
-  "web_accessible_resources": []
+  "version": "1.0"
 }
