[mv3] Change extension id

--- a/platform/mv3/firefox/manifest.json
+++ b/platform/mv3/firefox/manifest.json
@@ -15,7 +15,7 @@
   },
   "browser_specific_settings": {
     "gecko": {
-      "id": "uBOLite@raymondhill.net",
+      "id": "uBOLiteRedux@raymondhill.net",
       "strict_min_version": "127.0"
     },
     "gecko_android": {
