--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
+      - name: Setup nodejs
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
       - name: Clone repository
         uses: actions/checkout@v4
         with:
@@ -31,9 +35,6 @@ jobs:
           tools/make-firefox.sh ${{ env.VERSION }}
           tools/make-thunderbird.sh ${{ env.VERSION }}
       - name: Build NPM package
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
         run: |
           tools/make-npm.sh ${{ env.VERSION }}
       - name: Assemble release notes
