--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "npm dev tools",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --no-warn-ignored -- ./src/js/*.js ./src/js/**/*.js ./**/*.json ./platform/**/*.js ",
+    "lint": "eslint --no-warn-ignored -- \"./src/js/*.js\" \"./src/js/**/*.js\" \"./**/*.json\" \"./platform/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
