[mv3] Reflect no-filtering mode on the toolbar icon
Related issue:
https://github.com/uBlockOrigin/uBOL-home/issues/198

--- a/platform/mv3/firefox/manifest.json
+++ b/platform/mv3/firefox/manifest.json
@@ -52,7 +52,9 @@
     "activeTab",
     "declarativeNetRequest",
     "scripting",
-    "storage"
+    "storage",
+    "tabs",
+    "webNavigation"
   ],
   "short_name": "uBO Lite",
   "version": "1.0",
