[mv3] New approach to toggle toolbar icon not requiring extra permissions
Related issue:
https://github.com/uBlockOrigin/uBOL-home/issues/198#issuecomment-2855135571

As a result, the permissions `tabs` and `webNavigation` have been removed.

--- a/platform/mv3/safari/manifest.json
+++ b/platform/mv3/safari/manifest.json
@@ -40,9 +40,7 @@
     "declarativeNetRequest",
     "declarativeNetRequestWithHostAccess",
     "scripting",
-    "storage",
-    "tabs",
-    "webNavigation"
+    "storage"
   ],
   "short_name": "uBO Lite",
   "version": "1.0",
