[mv3] Safari works; use 3-component version for uBOL
uBOL doesn't pass validation when using 4-component versioning,
so falling back to 3-component versioning for all platforms to
avoid special case.

--- a/platform/mv3/safari/manifest.json
+++ b/platform/mv3/safari/manifest.json
@@ -9,6 +9,11 @@
     "type": "module",
     "persistent": false
   },
+  "browser_specific_settings": {
+    "safari": {
+      "strict_min_version": "18.4"
+    }
+  },
   "commands": {
     "enter-zapper-mode": {
       "description": "__MSG_zapperTipEnter__"
