--- a/platform/mv3/safari/manifest.json
+++ b/platform/mv3/safari/manifest.json
@@ -65,6 +65,22 @@
       "matches": [
         "<all_urls>"
       ]
+    },
+    {
+      "resources": [
+        "picker-ui.html"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    },
+    {
+      "resources": [
+        "unpicker-ui.html"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
     }
   ]
 }
