[mv3] Add ability to assign a shortcut to "Create a custom filter"

--- a/platform/mv3/firefox/manifest.json
+++ b/platform/mv3/firefox/manifest.json
@@ -25,6 +25,9 @@
   "commands": {
     "enter-zapper-mode": {
       "description": "__MSG_zapperTipEnter__"
+    },
+    "enter-picker-mode": {
+      "description": "__MSG_pickerTipEnter__"
     }
   },
   "declarative_net_request": {
