--- a/platform/mv3/chromium/manifest.json
+++ b/platform/mv3/chromium/manifest.json
@@ -15,6 +15,9 @@
   "commands": {
     "enter-zapper-mode": {
       "description": "__MSG_zapperTipEnter__"
+    },
+    "enter-picker-mode": {
+      "description": "__MSG_pickerTipEnter__"
     }
   },
   "declarative_net_request": {
