Revert "Add Safari toolbar icon"
This reverts commit 3f73887e47818e03231f44b84953e4f10f4d3f4c.

--- a/platform/mv3/safari/manifest.json
+++ b/platform/mv3/safari/manifest.json
@@ -1,6 +1,6 @@
 {
   "action": {
-    "default_icon": "/img/icon_safari.svg",
+    "default_icon": "/img/icon_64.png",
     "default_popup": "popup.html"
   },
   "author": "Raymond Hill",
